--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main>
+      <h1>Etch a Sketch</h1>
+      <div class="container"></div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
