--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1>Etch a Sketch</h1>
-      <div class="container"></div>
+      <div class="canvas"></div>
     </main>
     <script src="index.js"></script>
   </body>
