Create button list div

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <main>
       <h1>Etch a Sketch</h1>
+      <div class="btn-list">
+        <button type="submit" data-action="set-grid">Set grid</button>
+        <button type="reset" data-action="reset-grid">Reset grid</button>
+      </div>
       <div class="canvas"></div>
     </main>
     <script src="index.js"></script>
