Add an exclamation mark in site title

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Etch a Sketch</title>
+    <title>Etch a Sketch!</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
-      <h1>Etch a Sketch</h1>
+      <h1>Etch a Sketch!</h1>
       <div class="btn-list">
         <button type="submit" data-action="set-grid">Set grid</button>
         <button type="reset" data-action="reset-grid">Reset grid</button>
