Add clear canvas button and query select all buttons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <main>
       <h1>Etch-a-Sketch!</h1>
       <div class="btn-list">
-        <button type="submit" data-action="set-grid">Set grid</button>
-        <button type="reset" data-action="reset-grid">Reset grid</button>
+        <button data-action="set-grid">Set grid</button>
+        <button data-action="reset-grid">Reset grid</button>
+        <button data-action="clear-canvas">Clear canvas</button>
       </div>
       <div class="canvas"></div>
     </main>
