Create color option list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <main>
       <h1>Etch-a-Sketch!</h1>
       <div class="btn-list">
+        <select name="colors" id="colors">
+          <option value="red">Red</option>
+          <option value="blue">Blue</option>
+        </select>
         <button data-action="set-grid">Set grid</button>
         <button data-action="reset-grid">Reset grid</button>
       </div>
