Expand color list palette

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
       <h1>Etch-a-Sketch!</h1>
       <div class="btn-list">
         <select name="colors" id="colors">
+          <option value="black">Black</option>
+          <option value="gray">Gray</option>
+          <option value="white">White</option>
           <option value="red">Red</option>
+          <option value="orange">Orange</option>
+          <option value="brown">Brown</option>
+          <option value="yellow">Yellow</option>
+          <option value="green">Green</option>
+          <option value="cyan">Cyan</option>
           <option value="blue">Blue</option>
+          <option value="purple">Purple</option>
+          <option value="pink">Pink</option>
         </select>
         <button data-action="set-grid">Set grid</button>
         <button data-action="reset-grid">Reset grid</button>
