Use HSL for color list scheme

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
       <h1>Etch-a-Sketch!</h1>
       <div class="btn-list">
         <select name="colors" id="colors">
-          <option value="black">Black</option>
-          <option value="gray">Gray</option>
-          <option value="white">White</option>
-          <option value="red">Red</option>
-          <option value="orange">Orange</option>
-          <option value="brown">Brown</option>
-          <option value="yellow">Yellow</option>
-          <option value="green">Green</option>
-          <option value="cyan">Cyan</option>
-          <option value="blue">Blue</option>
-          <option value="purple">Purple</option>
-          <option value="pink">Pink</option>
+          <option value="hsl(0, 0%, 5%)">Black</option>
+          <option value="hsl(0deg, 0%, 45%)">Gray</option>
+          <option value="hsl(0deg, 0%, 100%)">White</option>
+          <option value="hsl(0deg, 75%, 50%)">Red</option>
+          <option value="hsl(20deg, 75%, 50%)">Orange</option>
+          <option value="hsl(20deg, 75%, 35%)">Brown</option>
+          <option value="hsl(50deg, 75%, 50%)">Yellow</option>
+          <option value="hsl(120deg, 55%, 50%)">Green</option>
+          <option value="hsl(185deg, 75%, 50%)">Cyan</option>
+          <option value="hsl(230deg, 75%, 45%)">Blue</option>
+          <option value="hsl(275deg, 75%, 50%)">Violet</option>
+          <option value="hsl(305deg, 75%, 60%)">Pink</option>
         </select>
         <button data-action="set-grid">Set grid</button>
         <button data-action="reset-grid">Reset grid</button>
